@@ -14,6 +14,9 @@ Armitage Changelog
   This menu item will show applicable post-exploitation modules in 
   the module browser.
 - Loot browser now opens loot viewer as a tab.
+- Loot viewer now has many of the same keyboard shortcuts as a console
+  tab. You can Ctrl+F to search for stuff, Ctrl+Plus/Minus to increase
+  and shrink the font, and Ctrl+A to select everything.
 
 02 Jul 11 - Change Log
 --------- 
